Telegram bot 조금 작업

--- a/YS_Upbit/App.config
+++ b/YS_Upbit/App.config
@@ -1,12 +1,21 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
   </startup>
   <appSettings>
-    <add key="folderpath" value="d:\"/>
-    <add key="filepath" value="a.txt"/>
-    <add key="access_key" value="KXUWAior5hSKXMDO1LWlGE51vYcIxArHzRoCvXoy"/>
-    <add key="secret_key" value="Qka958p645jgD68wcdwzBC5qgUSnD36EqV0ehsMX"/>
+    <add key="folderpath" value="d:\" />
+    <add key="filepath" value="a.txt" />
+    <add key="access_key" value="KXUWAior5hSKXMDO1LWlGE51vYcIxArHzRoCvXoy" />
+    <add key="secret_key" value="Qka958p645jgD68wcdwzBC5qgUSnD36EqV0ehsMX" />
+    <add key="telegram_token" value="745997380:AAEDrYD_fa5PGgLLZ5JqotAzN8hAGDIuvGU" />
   </appSettings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-11.0.0.0" newVersion="11.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
