--- a/YS_Upbit/packages.config
+++ b/YS_Upbit/packages.config
@@ -3,6 +3,7 @@
   <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.4.0" targetFramework="net46" />
   <package id="Microsoft.IdentityModel.Logging" version="5.4.0" targetFramework="net46" />
   <package id="Microsoft.IdentityModel.Tokens" version="5.4.0" targetFramework="net46" />
-  <package id="Newtonsoft.Json" version="10.0.1" targetFramework="net46" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net46" />
   <package id="System.IdentityModel.Tokens.Jwt" version="5.4.0" targetFramework="net46" />
+  <package id="System.Net.Requests" version="4.3.0" targetFramework="net46" />
 </packages>
