--- a/YS_Upbit/YS_Upbit.csproj
+++ b/YS_Upbit/YS_Upbit.csproj
@@ -65,7 +65,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TelegramBotApi.cs" />
-    <Compile Include="UpBitProcess.cs" />
+    <Compile Include="UpbitAPI.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
