- Telegram API 연동 완성

--- a/YS_Upbit/App.config
+++ b/YS_Upbit/App.config
@@ -5,10 +5,11 @@
   </startup>
   <appSettings>
     <add key="folderpath" value="d:\" />
-    <add key="filepath" value="a.txt" />
+    <add key="filepath" value="Signal.txt" />
     <add key="access_key" value="bCx3A5fO8kWfoM5WrNTtdbx9l9xRvaIGnCB3uSjy" />
     <add key="secret_key" value="LXZHyqdxIgexfYqNokGt2xvNR1sKNixirMDauhca" />
-    <add key="telegram_token" value="682012586:AAFsgp4Om6izJC597xA4FiM3wwoO9_McmFQ" />
+    <add key="telegram_token" value="847134638:AAFDr-LYtANnangEqkerhRwHF3-B-gu4JcY" />
+    <add key="telegram_char_id" value="853884665"/>
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
