--- a/YS_Upbit/App.config
+++ b/YS_Upbit/App.config
@@ -6,10 +6,10 @@
   <appSettings>
     <add key="folderpath" value="d:\" />
     <add key="filepath" value="Signal.txt" />
-    <add key="access_key" value="bCx3A5fO8kWfoM5WrNTtdbx9l9xRvaIGnCB3uSjy" />
-    <add key="secret_key" value="LXZHyqdxIgexfYqNokGt2xvNR1sKNixirMDauhca" />
-    <add key="telegram_token" value="847134638:AAFDr-LYtANnangEqkerhRwHF3-B-gu4JcY" />
-    <add key="telegram_char_id" value="853884665"/>
+    <add key="access_key" value="UpBit AccessKey 입력" />
+    <add key="secret_key" value="UpBit SecretKey 입력" />
+    <add key="telegram_token" value="Telegram bot token 입력" />
+    <add key="telegram_char_id" value="Telegram 본인 "/>
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
